tests/ui/higher-rank-trait-bounds/normalize-under-binder/issue-90950.stderr
error[E0277]: the trait bound `for<'a> <_ as Yokeable<'a>>::Output: IsCovariant<'a>` is not satisfied
  --> $DIR/issue-90950.rs:50:12
   |
LL |     upcast(y)
   |     ------ ^ the trait `for<'a> IsCovariant<'a>` is not implemented for `<_ as Yokeable<'a>>::Output`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `IsCovariant<'a>` is implemented for `std::borrow::Cow<'a, T>`
note: required by a bound in `upcast`
  --> $DIR/issue-90950.rs:27:42
   |
LL | fn upcast<Y>(x: Yoke<Y>) -> Yoke<Box<dyn IsCovariant<'static> + 'static>> where
   |    ------ required by a bound in this function
LL |     Y: for<'a> Yokeable<'a>,
LL |     for<'a> <Y as Yokeable<'a>>::Output: IsCovariant<'a>
   |                                          ^^^^^^^^^^^^^^^ required by this bound in `upcast`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
